tests/fixtures/invalid/int_in_none.py
# Cannot use 'in' with Int and None
x: bool = 1 in None
